# tauri_app

./: index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bluetooth.rs  lib.rs
src/components/: BluetoothView.vue
src/router/: index.ts
src/views/: AboutView.vue  BluetoothView.vue  HomeView.vue
