[package]
name = "tauri_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bluetooth 시리얼 크레이트 추가
android-bluetooth-serial = "0.1.0"
# 스레드 안전한 상태 관리를 위해 parking_lot 또는 std::sync::Mutex/Arc 필요
parking_lot = "0.12" # 또는 std::sync = { version = "...", features = ["parking_lot"] }

